--- a/src/app/slider/slider.component.scss
+++ b/src/app/slider/slider.component.scss
@@ -1,5 +1,5 @@
 .container{
-    width: 100vh;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -12,6 +12,8 @@ swiper-container {
     text-align: center;
     font-size: 18px;
     background: #fff;
+
+
     display: flex;
     justify-content: center;
     align-items: center;
