little css changes

--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,15 +1,24 @@
-<swiper-container class="container" loop="true" navigation="true">
-  <swiper-slide>
+<swiper-container class="swiper-container" loop="true" navigation="true">
+  <swiper-slide class="swiper-slide">
     <img
-      src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg"
+      src="https://www.aveliving.com/AVE/media/Property_Images/Florham%20Park/hero/flor-apt-living-(2)-hero.jpg?ext=.jpg"
       alt=""
     />
   </swiper-slide>
 
   <swiper-slide>
     <img
-      src="https://letsenhance.io/static/8f5e523ee6b2479e26ecc91b9c25261e/1015f/MainAfter.jpg"
+      src="https://chnapartments.com/assets/images/cache/kitchen-and-living-room-a4be940df9ffd81de9014c7fc0f53336.jpg"
+      alt=""
+    />
+  </swiper-slide>
+
+  <swiper-slide>
+    <img
+      src="https://res.cloudinary.com/g5-assets-cld/image/upload/x_0,y_376,h_1200,w_2400,c_crop/q_auto,f_auto,fl_lossy,g_center,h_1000,w_2000/g5/g5-c-5nd068md8-graham-companies/g5-cl-1lu8toesr9-graham-companies-miami-lakes-fl/uploads/i0kytmldi7mkbq0wap1d_zfadwb.jpg"
       alt=""
     />
   </swiper-slide>
 </swiper-container>
+
+<img src="" alt="" />
