--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <nav class="bg-gray-800">
-  <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+  <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 navbar">
     <div class="relative flex h-16 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
         <!-- Mobile menu button-->
         <button
           type="button"
-          class="text-gray-400 hover:text-white focus:outline-none"
+          class="text-gray-400 hover:text-grey focus:outline-none"
           (click)="toggleMenu()"
         >
           <svg
@@ -45,11 +45,11 @@
           <div class="flex space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
             <a
-        *ngFor="let el of arr"
-        href="#"
-        class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
-        >{{ el }}</a
-      >
+              *ngFor="let el of arr"
+              href="#"
+              class="text-gray-300 hover:bg-gray-700 hover:text-grey block px-3 py-2 rounded-md text-base font-medium"
+              >{{ el }}</a
+            >
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
       >
         <button
           type="button"
-          class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
+          class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
         >
           <span class="absolute -inset-1.5"></span>
           <span class="sr-only">View notifications</span>
@@ -130,7 +130,6 @@
               id="user-menu-item-2"
               >Sign out</a
             >
-            
           </div>
         </div>
       </div>
@@ -142,7 +141,7 @@
       <a
         *ngFor="let el of arr"
         href="#"
-        class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+        class="text-gray-300 hover:bg-gray-700 hover:text-gray-300 block px-3 py-2 rounded-md text-base font-medium"
         >{{ el }}</a
       >
     </div>
