--- a/src/app/slider/slider.component.scss
+++ b/src/app/slider/slider.component.scss
@@ -1,27 +1,41 @@
-.container{
-    width: 100%;
-    object-fit: cover;
+.swiper-container {
+  width: 100%;
+  height: 80vh; /* Adjusted height to be 80% of viewport height */
+  position: relative;
+  overflow: hidden;
 }
 
-swiper-container {
-    width: 100%;
-    height: 100%;
-  }
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
+.swiper-button-next,
+.swiper-button-prev {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.swiper-button-next {
+  right: 10px;
+}
 
-  swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+.swiper-button-prev {
+  left: 10px;
+}
